Copyrights & Minor mods

--- a/css/style.css
+++ b/css/style.css
@@ -50,10 +50,29 @@ body{
 }
 .titlemsg .heading .main{
     font-size: 50px;
+    font-weight: 300;
 }
 .titlemsg .heading .sub{
     font-size: 23px;
 }
+  
+  @media screen and (max-width: 530px) {
+    .titlemsg .heading .main {
+      position: relative;
+      font-size: 50px;
+        font-weight: 200;
+    }
+    .titlemsg .heading .sub {
+      font-size: 15px;
+      font-weight: 300;
+      position: relative;
+    }
+    .slides-navigation .prev, .slides-navigation .next {
+      width: 25px;
+      height: 25px;
+    }
+  }
+  
 .section{
     padding: 100px 0px;
 }
@@ -282,4 +301,67 @@ body{
 }
 .items{
     padding: 0;
+}
+    
+
+.copyrightSection{
+    background-color: #222f3e;
+    color: #fff;
+    padding: 30px 5px;
+    margin-top: -80px;
+}
+.copyrightSection p{
+    margin: 0;
+}
+#navigation
+{
+    background-color: #222f3e;
+    padding: 20px 10px;
+    z-index: 100;
+    width: 100%;
+}
+#navigation li{
+    padding: 0 10px;
+    
+}
+#navigation li:hover{
+    font-weight: 400;
+    font-size: 150%;
+  }
+
+
+#navigation li a{
+    color: #fff;
+    font-size: 100%;
+}
+.navbar-brand,
+.navbar-brand:hover{
+    color:#fff;
+}
+.navbar-toggler-icon{
+    background: url(../img/icons/menu.png);
+    background-size: 100%;
+}
+.fixedNav #navigation{
+    position: fixed;
+    top: 0;
+}
+.links{
+    margin-top: 30px;
+    text-align: center;
+    width: 100%;
+    display: inline-block;
+    }
+.fb,.lk,.gh{
+    padding: 5px;
+    color: #fff;
+}
+.dev{
+    margin-top:30px;
+}
+.dev p{
+    margin:0;
+}
+.Sign{
+    font-size:130%;
 }
