--- a/css/style.css
+++ b/css/style.css
@@ -162,6 +162,15 @@ body{
     margin-left: -20%;
     color: #222f3e;
   }
+.portfolioheading{
+    background-color: #222f3e;
+    color:#fff;
+    text-align: center;
+    width: 100%;
+    padding: 3%;
+    margin-bottom: -70px;
+}
+  
 .contactButton
 {
     color: #fff;
@@ -207,6 +216,7 @@ body{
 .filter{
     text-align: center;
     width: 100%;
+    margin-bottom: 30px;
 }
 
 .section .heading{
@@ -315,7 +325,7 @@ body{
 }
 #navigation
 {
-    background-color: #222f3e;
+    background-color: rgb(34, 47, 62, 0.95);
     padding: 20px 10px;
     z-index: 100;
     width: 100%;
@@ -364,4 +374,7 @@ body{
 }
 .Sign{
     font-size:130%;
+}
+#logo{
+    
 }
