--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body{
 }
 .slides-navigation{
     z-index: 6;
+    opacity:50%;
 }
 .slides-navigation .prev,
 .slides-navigation .next
@@ -168,9 +169,11 @@ body{
     text-align: center;
     width: 100%;
     padding: 3%;
+    padding-top: 5%;
     margin-bottom: -70px;
+
 }
-  
+
 .contactButton
 {
     color: #fff;
@@ -318,7 +321,8 @@ body{
     background-color: #222f3e;
     color: #fff;
     padding: 30px 5px;
-    margin-top: -80px;
+    margin-top: -120px;
+    font-size: 80%;
 }
 .copyrightSection p{
     margin: 0;
@@ -367,7 +371,7 @@ body{
     color: #fff;
 }
 .dev{
-    margin-top:30px;
+    margin:30px 0px 10px;
 }
 .dev p{
     margin:0;
@@ -375,6 +379,21 @@ body{
 .Sign{
     font-size:130%;
 }
-#logo{
-    
+#navbarNav {
+    margin: 0 auto;
+    text-align: center;
+}
+.boot{
+    width:100%;
+    height:100%;
+    background-color: #fff;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    z-index: 800;
+}
+.boot .inner{
+    width:100%;
+    height:100%;
+    background: url(../img/boot.gif) center center no-repeat;
 }
