--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,12 @@ body{
     background-color: #fff;
     letter-spacing: 1px;
 }
-
+.bebas{
+    font-family: 'Bebas Neue', cursive;
+}
+.montserrat{
+    font-family: 'Montserrat', sans-serif;
+}
 .overlay{
     width: 100%;
     height: 100%;
